--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="IQ Soft Studio - 소프트웨어로 재밌는 걸 만드는 스튜디오"
+      content="IQ Soft - 소프트웨어로 재밌는 걸 만드는 스튜디오"
     />
-    <title>IQ Soft Studio | 소프트웨어로 재밌는 걸 만드는 스튜디오</title>
+    <title>IQ Soft | 소프트웨어로 재밌는 걸 만드는 스튜디오</title>
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
@@ -111,7 +111,7 @@
                 ></path>
               </svg>
             </div>
-            <span class="text-xl font-bold tracking-tight">IQ SOFT</span>
+            <span class="text-xl font-bold tracking-tight">IQ Soft</span>
           </div>
 
           <div class="hidden md:flex items-center gap-12 font-medium text-sm tracking-wide">
@@ -332,7 +332,7 @@
       <footer id="contact" class="px-6 lg:px-20 py-32 bg-background-dark border-t border-white/10">
         <div class="max-w-[1440px] mx-auto text-center">
           <h2 class="text-7xl md:text-[12rem] font-bold tracking-tighter mb-12">
-            같이 만들어요<span class="text-primary">.</span>
+            같이 <span class="whitespace-nowrap">만들어요</span><span class="text-primary">.</span>
           </h2>
 
           <div class="flex flex-col items-center gap-8">
@@ -355,7 +355,7 @@
               <a href="#" class="hover:text-white transition-colors">LinkedIn</a>
               <a href="#" class="hover:text-white transition-colors">Behance</a>
             </div>
-            <div>© 2026 IQ SOFT STUDIO. ALL RIGHTS RESERVED.</div>
+            <div>© 2026 IQ SOFT. ALL RIGHTS RESERVED.</div>
           </div>
         </div>
       </footer>
